--- a/html/payroll_form.html
+++ b/html/payroll_form.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/payroll_form.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet">
     <title>Employee Payroll Form</title>
-    <script defer src="../js/payroll_form.js"></script>
+    
 </head>
 
 <body>
@@ -29,6 +29,28 @@
             <div class="row-content">
                 <label for="name" class="label text">Name</label>
                 <input type="text" name="name" id="name" class="input" placeholder="Your Name ..." required>
+            </div>
+            <!-- UC 3 -->
+            <div class="row-content">
+                <label class="label text" for="profile">Profile image</label>
+                <div class="profile-radio-content">
+                    <label>
+            <input type="radio" id="profile2" name="profile" value="../images/profile_img-1.png" required>
+            <img class="profile" id="image1" src="../images/profile_img-1.png">
+          </label>
+                    <label>
+            <input type="radio" id="profile2" name="profile" value="../images/profile_img-2.png" required>
+            <img class="profile" id="image2" src="../images/profile_img-2.png">
+          </label>
+                    <label>
+            <input type="radio" id="profile3" name="profile" value="../images/profile_img-3.png" required>
+            <img class="profile" id="image3" src="../images/profile_img-3.png">
+          </label>
+                    <label>
+            <input type="radio" id="profile4" name="profile" value="../images/profile_img-4.png" required>
+            <img class="profile" id="image4" src="../images/profile_img-4.png">
+          </label>
+                </div>
             </div>
         </form>
     </div>
