--- a/html/payroll_form.html
+++ b/html/payroll_form.html
@@ -144,6 +144,7 @@
                         <option value="11">December</option>
                     </select>
                     <select id="year" name="Year">
+                        <option value="2021">2021</option>
                         <option value="2020">2020</option>
                         <option value="2019">2019</option>
                         <option value="2018">2018</option>
