Added: button and header

--- a/html/home.html
+++ b/html/home.html
@@ -17,7 +17,7 @@
   <!-- UC 1 -->
   <header class="header-content header">
     <div class="logo-content">
-      <img src="../assets/images/logo.png" alt="logo">
+      <img src="../images/logo.png" alt="logo">
       <div>
         <span class="emp-text">EMPLOYEE</span><br>
         <span class="emp-text emp-payroll">PAYROLL</span>
@@ -32,8 +32,8 @@
         Employee Details
         <div class="emp-count">10</div>
       </div>
-      <a href="../pages/payroll_form.html" class="add-button">
-        <img src="../assets/icons/plus_symbol.svg" alt="">Add User
+      <a href="../html/payroll_form.html" class="add-button">
+        <img src="../images/plus_symbol.svg" alt="">Add User
       </a>
     </div>
   </div>
