--- a/html/payroll_form.html
+++ b/html/payroll_form.html
@@ -167,7 +167,8 @@
                     <button type="reset" class="resetButton button">Reset</button>
                 </div>
             </div>
-
+            <script defer src="../js/payroll_form.js"></script>
+            <script defer src="../js/EmployeePayrollData.js"></script>
         </form>
     </div>
 </body>
